# APTRUSTNOV12

./: Assignments_QA  Assignments_QA.md  README.md
Assignments/FM/: Notes.txt
AsyncProgramming/SimpleProjects/First/: Cargo.toml
Beginners/: file_list_by_date.txt  news.txt  result.txt
Beginners/.ipynb_checkpoints/: AutomationPrograms-checkpoint.ipynb  Dec04_Basics_02-checkpoint.ipynb  Kapil_Dec4_Class3-checkpoint.ipynb
DailyPrograms/: Untitled.ipynb
DailyPrograms/100. no_std/: no_std_simple_prog.rs
DailyPrograms/100. no_std/led_blink/: Cargo.toml
DailyPrograms/100. no_std/led_blink/src/: main.rs
DailyPrograms/101.Collections/: Introduction.rs  String1  String1.rs  simple  simple.rs
DailyPrograms/11.Iterators/: simple  simple.rs
DailyPrograms/4. BoxOwnershipReference/: simpleStructureBox.rs
DailyPrograms/5.Enums/: TcpUdpEnum.rs  won_unwrap.rs
DailyPrograms/6. ResultOption/: Result_with_question.rs  SimpleResult.rs  return_error  return_error.rs
DailyPrograms/7.BoxRcArc/: Box_Block  Box_Block.rs  Rc_Example.rs  SimpleAllocDealloc  SimpleAllocDealloc.rs  SimpleAllocDealloc_String.rs
DailyPrograms/8.LifeTime/: Simple.rs  box_lifetime  box_lifetime.rs  danlgin_pointer  danlgin_pointer.rs  global_var  global_var.rs  largestString  largestString.rs  lazy_static.rs  lifetime_struct.rs  static_lifetime.rs  strucut_lifetime.rs
DailyPrograms/9.Threads/: dead_lock.rs  explicit_unlock.rs  mpsc  mpsc.rs  thread_return_value.rs
DailyPrograms/Algorithms/: TravelSalesPerson.cpp  a.out
DailyPrograms/BTreeMap/: simple  simple.rs
DailyPrograms/DSA/: a.out  (+1 more)
(+43 files in other folders)
