[package]
name = "blink_led"
version = "0.1.0"
edition = "2021"

[dependencies]
#arduino-hal = "0.5.0" # Check for the latest version
arduino-hal = { git = "https://github.com/Rahix/avr-hal", branch = "main", features = ["arduino-uno"] }


[profile.release]
panic = "abort"
lto = true
codegen-units = 1
